--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -57,7 +57,7 @@
         <h2 class="main-text">오늘 뭐 먹을래?</h2>
         <div class="main-box">
           <div class="main-box_1">
-          <p>아무 생각이 없다.</p>
+          <p>아무 생각이 없다</p>
           <p>아무거나 추천해줘!!</p>
           <button class="main-btn">룰렛 바로가기</button>
         </div>
