html 버튼 링크 연결

--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -59,12 +59,12 @@
           <div class="main-box_1">
           <p>아무 생각이 없다</p>
           <p>아무거나 추천해줘!!</p>
-          <button class="main-btn">룰렛 바로가기</button>
+          <button class="main-btn" onclick = "location.href ='/roulette'" >룰렛 바로가기</button>
         </div>
         <div class="main-box_2">
           <p>음식 이상형 월드컵을 통해서</p>
           <p>내가 원하는 음식 추천받을래!</p>
-          <button class="main-btn">테스트 바로가기</button>
+          <button class="main-btn" onclick = "location.href ='/test'">테스트 바로가기</button>
         </div>
         </div>
       </div>
