--- a/menu/templates/index.html
+++ b/menu/templates/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="/test">메뉴 추천</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/">게시판</a>
+                    <a class="nav-link" href="/board">게시판</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
