--- a/menu/templates/roulette.html
+++ b/menu/templates/roulette.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="/static/roulette.css" rel="stylesheet">
 
     <title>Document</title>
 </head>
@@ -53,12 +54,25 @@
             </nav>
                 
         </div>
-        <div>
-            <div>
-                <h2>룰렛 돌리기</h2>
-            </div>
+        <div class="roulette_main">
+          <div>
+            <h2>메뉴 추천해드립니다</h2>
+          </div>
+          <div class="roulette_main_btn">
+            <button class="roulette_cate_btn">랜덤</button>
+            <button class="roulette_cate_btn">한식</button>
+            <button class="roulette_cate_btn">중식</button>
+            <button class="roulette_cate_btn">양식</button>
+            <button class="roulette_cate_btn">일식</button>
+            <button class="roulette_cate_btn">기타</button>
+          </div>
+          <div class="roulette">
+            <canvas width="380" height='380'></canvas>  
+            <button class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
+          </div>
         </div>
     </div>
+    <script type="text/javascript" src="/static/roulette.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </body>
