--- a/menu/templates/login.html
+++ b/menu/templates/login.html
@@ -18,7 +18,7 @@
                 data: {},
                 success: function(response){
                     let rows = response['resultlist'] //resultlist 확인
-                    for ( let i = 0; i < rows.length; I++){
+                    for ( let i = 0; i < rows.length; i++){
                         let name = rows[i]['name']
                         let email = rows[i]['email']
                         let password = rows[i]['password']
