--- a/menu/templates/roulette.html
+++ b/menu/templates/roulette.html
@@ -59,8 +59,8 @@
             <h2>메뉴 추천해드립니다</h2>
           </div>
           <div class="roulette_main_btn">
-            <button class="roulette_cate_btn">랜덤</button>
-            <button class="roulette_cate_btn">한식</button>
+            <button class="roulette_cate_btn" onclick="foodGet()">랜덤</button>
+            <button class="roulette_cate_btn" onclick="foodKorea()">한식</button>
             <button class="roulette_cate_btn">중식</button>
             <button class="roulette_cate_btn">양식</button>
             <button class="roulette_cate_btn">일식</button>
@@ -74,6 +74,7 @@
     </div>
     <script type="text/javascript" src="/static/roulette.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </body>
 </html>
