--- a/menu/templates/roulette.html
+++ b/menu/templates/roulette.html
@@ -59,11 +59,11 @@
             <h2>메뉴 추천해드립니다</h2>
           </div>
           <div class="roulette_main_btn">
-            <button class="roulette_cate_btn" onclick="foodGet()">랜덤</button>
+            <button class="roulette_cate_btn" onclick="foodAll()">랜덤</button>
             <button class="roulette_cate_btn" onclick="foodKorea()">한식</button>
-            <button class="roulette_cate_btn">중식</button>
-            <button class="roulette_cate_btn">양식</button>
-            <button class="roulette_cate_btn">일식</button>
+            <button class="roulette_cate_btn" onclick="foodChina()">중식</button>
+            <button class="roulette_cate_btn" onclick="foodAmerica()">양식</button>
+            <button class="roulette_cate_btn" onclick="foodJapen()">일식</button>
             <button class="roulette_cate_btn">기타</button>
           </div>
           <div class="roulette">
