--- a/static/roulette.css
+++ b/static/roulette.css
@@ -24,6 +24,9 @@ canvas {
 .roulette_cate_btn {
     margin: 0 auto;
     border-radius: 10px;
+    background-color: white;
+    padding-left: 10px;
+    padding-right: 10px;
 
 }
 .roulette_main_btn {
