--- a/templates/join.html
+++ b/templates/join.html
@@ -6,25 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="/static/index.css" rel="stylesheet">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+    <!-- <link href="/static/index.css" rel="stylesheet"> -->
+
     <script>
         
-        function posthey() {
-            let name = $('#name').val()
-            let email = $('#email').val()
-            let password = $('#password').val()
+        function join() {
             $.ajax({
                 type: "POST",
-                url: "/user",
-                data: { name_give: name, email_give: email, password_give: password },
-                success: function(response){
-                    console.log(response['msg'])
-                    window.location.reload()
+                url: "/api/join",
+                data: {
+                    email_give: $('#email').val(),
+                    password_give: $('#password').val(),
+                    name_give: $('#name').val()
+                },
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        alert('회원가입이 완료되었습니다.')
+                        // window.location.href = '/join_finish'
+                    } else {
+                        alert(response['msg'])
                     }
-                    })
                 }
+            })
+        }
     </script>
 
 </head>
@@ -76,10 +85,10 @@
       <div class="join_page">
         <h2 class="join_text">회원 정보를 입력해주세요.</h2>
         닉네임: <input id="name" type="text" />
-        id: <input id="email" type="text" />
+        id: <input id="email" type="email" />
         이메일주소를 입력해주세요. 이메일 주소가 아이디입니다.
-        pw: <input id="password" type="text" />
-        <button> 가입하기 </button>
+        pw: <input id="password" type="password" />
+        <button type="submit" onclick="join()"> 가입하기 </button>
       </div>
     </div>
 
