--- a/templates/login.html
+++ b/templates/login.html
@@ -5,35 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="/static/index.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+     
     <script>
-        
-        function gethey() {
-            $.ajax({
-                type: "GET",
-                url: "/user",
-                data: {},
-                success: function(response){
-                    let rows = response['resultlist'] //resultlist 확인
-                    for ( let i = 0; i < rows.length; i++){
-                        let name = rows[i]['name']
-                        let email = rows[i]['email']
-                        let password = rows[i]['password']
-                        let temp_html = ``   // 아이디패스워드를 어따 붙여놔야 로그인되었음을 인증할텐데, 이건 찾아보자
-                            if ( done ==0 ) {
-                                temp_html = `스크립트 삽입`
-                                } else {
-                                    temp_html = `스크립트 삽입`
-                                    }
-                                    $('#붙여넣을곳id값').append(temp_html)
-                        }
-                    }
-                })
-            }
-    </script>
+      function login() {
+          $.ajax({
+              type: "POST",
+              url: "/api/login",
+              data: {
+                  email_give: $('#email').val(),
+                  password_give: $('#password').val(),
+              },
+              success: function (response) {
+                  console.log(response)
+                  if (response['result'] == 'success') {
+                      // 로그인에 성공하면 token을 쿠키에 저장!!!!
+                      $.cookie('mytoken', response['token']);
+                      alert('로그인 완료!')
+                      window.location.href = '/'
+                  } else {
+                      alert(response['msg'])
+                  }
+              }
+          })
+      }
+  </script>
 
 </head>
 <body>
@@ -83,10 +87,10 @@
       </div>
       <div class="login_page">
         <h2 class="login_text">로그인해주세요.</h2>
-        id: <input type="text" />
-        pw: <input type="text" />
-        <button> 로그인 </button>
-        <button> 회원가입 </button>
+        id: <input id="email" type="email" />
+        pw: <input id="password" type="password" />
+        <button type="submit" onclick="login()"> 로그인 </button>
+        <button onClick="location.href='join.html'"> 회원가입 </button>
       </div>
     </div>
 
