파일 루트 변경

--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -10,7 +10,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link href="/static/ladder.css" rel="stylesheet">
+    <link href="/static/css/ladder.css" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -104,5 +104,6 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="/static/js/ladder.js"></script>
   </body>
 </html>
