--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="/static/index.css" rel="stylesheet">
+    <link href="/static/css/index.css" rel="stylesheet">
 </head>
 <body>
     <div class="main">
@@ -45,7 +45,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">내정보 보기</a></li>
-                      <li><a class="dropdown-item" href="#">로그인</a></li>
+                      <li><a class="dropdown-item" href="/login">로그인</a></li>
                       <li><a class="dropdown-item" href="#">로그아웃</a></li>
                     </ul>
                   </li>
@@ -73,6 +73,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/static/index.js"></script>
+    <script type="text/javascript" src="/static/js/index.js"></script>
 </body>
 </html>
