--- a/templates/login.html
+++ b/templates/login.html
@@ -5,43 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="/static/css/login.css" rel="stylesheet">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-     
-    <script>
-      function login() {
-          $.ajax({
-              type: "POST",
-              url: "/api/login",
-              data: {
-                  email_give: $('#email').val(),
-                  password_give: $('#password').val(),
-              },
-              success: function (response) {
-                  console.log(response)
-                  if (response['result'] == 'success') {
-                      // 로그인에 성공하면 token을 쿠키에 저장!!!!
-                      $.cookie('mytoken', response['token']);
-                      alert('로그인 완료!')
-                      window.location.href = '/'
-                  } else {
-                      alert(response['msg'])
-                  }
-              }
-          })
-      }
-  </script>
-
 </head>
 <body>
-    <div class="login">
+    <div>
       <div class="nav-bar">
         <nav class="navbar bg-light fixed-top">
           <div class="container-fluid">
@@ -57,7 +25,7 @@
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">메인화면</a>
+                    <a class="nav-link" aria-current="page" href="/">메인화면</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/roulette">랜덤 룰렛</a>
@@ -85,17 +53,38 @@
         </nav>
             
       </div>
-      <div class="login_page">
+      <!-- <div class="login_page">
         <h2 class="login_text">로그인해주세요.</h2>
-        id: <input id="email" type="email" />
-        pw: <input id="password" type="password" />
+        <input id="email" type="email" placeholder="Email"/>
+        <input id="password" type="password" placeholder="Password" />
         <button type="submit" onclick="login()"> 로그인 </button>
         <button onClick="location.href='join.html'"> 회원가입 </button>
-      </div>
+      </div> -->
+      <div class="wrap">
+        <div class="login">
+            <h2>오메추!</h2>
+            <div class="login_id">
+                <h4>Email</h4>
+                <input type="email" name="" id="email" placeholder="Email">
+            </div>
+            <div class="login_pw">
+                <h4>Password</h4>
+                <input type="password" name="" id="password" placeholder="Password">
+            </div>
+            <div class="submit">
+                <input class="mb-3" type="submit" onclick="login()" value="로그인">
+                <p class="submit_text">아직 오메추의 회원이 아니신가요?</p>
+                <input type="submit" onclick="location.href='/join'" value="회원가입">
+            </div>
+        </div>
+    </div>
     </div>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/static/index.js"></script>
+    <script type="text/javascript" src="/static/js/login.js"></script>
 </body>
 </html>
