--- a/templates/join_finish.html
+++ b/templates/join_finish.html
@@ -56,7 +56,7 @@
       </div>
       <div class="joinfinishiß_page">
         <h2 class="login_text">회원가입 축하합니다.</h2>
-        <button> 홈으로가기 </button>
+        <button onclick="location.href='/'"> 홈으로가기 </button>
       </div>
     </div>
 
