--- a/static/css/ladder.css
+++ b/static/css/ladder.css
@@ -1,3 +1,12 @@
 .ladder_main {
     margin: 100px auto;
+    text-align: center;
+}
+.ladder {
+    max-height: 600px;
+    width: 400px;
+    min-height: 200px;
+    margin: 10px auto;
+    border: 2px solid black;
+    border-radius: 20px;
 }
