--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -88,22 +88,27 @@
       </div>
       <div class="mt-5"></div>
       <div class="ladder_main">
-        <div class="">
-          <label for="input" class="form-label">내가 먹고싶은 메뉴</label>
-          <input
-            type="text"
-            id="inputfood"
-            class="form-control"
-          />
+        <form>
+          <div id="box">
+              <input id="want_food" type="text" placeholder="내가 먹고 싶은 메뉴"> <input type="button" value="추가" onclick="add_textbox()">
+          </div>
+      </form>
+        <div class="ladder">
+          <h4 class="mt-3" id="input_list">추가한 메뉴 리스트</h4>
+          <div id="ladder"></div>
+        </div>
+        <div>
+          <button class="ladder_btn">룰렛 돌리기</button>
         </div>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="/static/js/ladder.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   </body>
 </html>
