--- a/templates/login.html
+++ b/templates/login.html
@@ -7,52 +7,12 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="/static/css/login.css" rel="stylesheet">
+    <script src="/static/js/navbar.js" defer></script>
+
 </head>
 <body>
     <div>
-      <div class="nav-bar">
-        <nav class="navbar bg-light fixed-top">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">오메추!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">오메추</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">메인화면</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/roulette">랜덤 룰렛</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/test">메뉴 추천</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/board">게시판</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      내정보
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">내정보 보기</a></li>
-                      <li><a class="dropdown-item" href="#">로그인</a></li>
-                      <li><a class="dropdown-item" href="#">로그아웃</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </nav>
-            
-      </div>
+      <main-nav-bar></main-nav-bar>
       <!-- <div class="login_page">
         <h2 class="login_text">로그인해주세요.</h2>
         <input id="email" type="email" placeholder="Email"/>
