--- a/static/css/ladder.css
+++ b/static/css/ladder.css
@@ -2,6 +2,18 @@
     margin: 100px auto;
     text-align: center;
 }
+.main_btn{
+    border: 2px;
+    margin-left: 20px;
+    background-color: black;
+    color: white;
+}
+.ladder_spin{
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+    margin: 0 auto;
+}
 .ladder {
     max-height: 600px;
     width: 400px;
