--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -13,14 +13,15 @@
     <link href="/static/css/ladder.css" rel="stylesheet">
     <script src="/static/js/navbar.js" defer></script>
     <title>Document</title>
+    <link href="/static/css/roulette.css" rel="stylesheet">
   </head>
   <body>
     <div>
       <main-nav-bar></main-nav-bar>
-      <div class="ladder_main">
-        <form>
+      <div id="ladder_main" class="ladder_main">
+        <form id="ladderForm">
           <div id="box">
-              <input id="want_food" type="text" placeholder="내가 먹고 싶은 메뉴"> <input type="button" value="추가" onclick="addTextbox()">
+              <input id="want_food" type="text" placeholder="내가 먹고 싶은 메뉴"> <input id="addBtn" type="button" value="추가" onclick="addTextbox()">
           </div>
       </form>
         <div class="ladder">
@@ -28,11 +29,20 @@
           <div id="ladder">
           </div>
         </div>
-        <div>
-          <button class="main_ladder_btn" onclick="randomFood()">룰렛 돌리기</button>
-        </div>
+        <button onclick="makeRl()">룰렛 만들기</button>
       </div>
     </div>
+    <div id="makeRl" style="display: none">
+      <div class="ladder_spin">
+        <h2>메뉴 추천으로 돌아가기</h2>
+        <button class="main_btn" onclick="makeRl()">버튼</button>
+      </div>
+      <div class="roulette">
+        <canvas width="380" height='380'></canvas>  
+        <button class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/js/ladder.js"></script>
   </body>
