--- a/templates/board.html
+++ b/templates/board.html
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/static/js/navbar.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <link href="/static/css/board.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <main-nav-bar></main-nav-bar>
+    <div class="main_board">
+        <div class="main_board_copy">
+            <h2>오메추! 게시판</h2>
+        </div>
+        <div id="board_index">
+            <div class="board_index_box">
+                <p>index</p>
+                <h2>title</h2>
+                <h6>내용</h6>
+            </div>
+        </div>
+        <div>
+            <button>글 작성하기</button>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/static/js/board.js"></script>
 </body>
 </html>
