--- a/templates/board.html
+++ b/templates/board.html
@@ -10,20 +10,49 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- header -->
     <main-nav-bar></main-nav-bar>
-    <div class="main_board">
-        <div class="main_board_copy">
-            <h2>오메추! 게시판</h2>
+    <div class="mt-5 pt-5"></div>
+    <!-- 게시판 화면 -->
+    <div class="board">
+        <div class="board_header">
+            <h1>오메추! 게시판</h1>
         </div>
-        <div id="board_index">
-            <div class="board_index_box">
-                <p>index</p>
-                <h2>title</h2>
-                <h6>내용</h6>
+        <div class="board_body">
+            <input type="search" placeholder="검색어를 입력하세요.">
+            <a class="search" href="#">검색</a>
+
+            <div class="content-box">
+                <div class="check"><input type="checkbox" name="" id=""></div>
+                <div class="title"><a href="view.html">첫번째 게시물</a></div>
+                <div class="delete"><button>X</button></div>
             </div>
+            <div class="content-box">
+                <div class="check"><input type="checkbox" name="" id=""></div>
+                <div class="title"><a href="view.html">두번째 게시물</a></div>
+                <div class="delete"><button>X</button></div>
+            </div>
+            <div class="content-box">
+                <div class="check"><input type="checkbox" name="" id=""></div>
+                <div class="title"><a href="view.html">세번째 게시물</a></div>
+                <div class="delete"><button>X</button></div>
+            </div>
+            <div class="content-box">
+                <div class="check"><input type="checkbox" name="" id=""></div>
+                <div class="title"><a href="view.html">네번째 게시물</a></div>
+                <div class="delete"><button>X</button></div>
+            </div>
+                <ul class="number">
+                    <li><a href="#">&lt;</a></li>
+                    <li><a href="#" class="active">1</a></li>
+                    <li><a href="#" class="">2</a></li>
+                    <li><a href="#" class="">3</a></li>
+                    <li><a href="#" class="">4</a></li>
+                    <li><a href="#">&gt;</a></li>
+                </ul>
         </div>
-        <div>
-            <button>글 작성하기</button>
+        <div class="btn">
+            <a href="/board/write">글쓰기</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
