--- a/templates/test.html
+++ b/templates/test.html
@@ -9,8 +9,56 @@
     <script src="/static/js/navbar.js" defer></script>
     <title>Document</title>
 </head>
-<body>
-    <main-nav-bar></main-nav-bar>
+<body class="container">
+        <main-nav-bar></main-nav-bar>
+        <div class="mt-5"></div>
+        <!-- 시작 페이지 -->
+        <article class="start">
+             <img id="img" class="mt-5" src="/static/images/test.png" alt="음식 테스트">
+            <button type="button" class="startQus btn-start mt-3" id="startButton" onclick='cateStart()'>테스트 시작하기</button>
+        </article>
+        <!-- 문제 시작  -->
+        <!-- 카테고리별 문제 -->
+        <article class="cate_qus">
+            <div class="cate_question">
+                
+                <h2 class="text-center mt-3">당신이 좋아하는 카테고리는?</h2>
+                <div class="cate_button">
+                <button id="KR"class="cate_btn">한식</button>
+                <button id="CN"class="cate_btn">중식</button>
+                <button id="AM"class="cate_btn">양식</button>
+                <button id="JP"class="cate_btn">일식</button>
+                </div>
+                <input id="cate" type="hidden" value="">
+            </div>
+        </article>
+        <!-- 카테고리 이후 문제 -->
+        <article class="question">
+            <div class="progress mt-5">
+                <div class="progress-bar" role="progressbar" aria-label="Basic example" style="width: calc(100/9*1%)"></div>
+              </div>
+              <div class="qus">
+                <h2 id="title" class="text-center mt-5 mb-5 question-content">문제</h2>
+            </div>
+            <input id="type" type="hidden" value="EI">
+            <button id="A" type="button" class="mt-3 btn-answer btn btn-primary">Primary</button>
+            <button id="B" type="button" class="btn-answer btn btn-primary mt-3">Primary</button>
+        </article>
+        <!-- 로딩창 -->
+        <article class="loading">
+                <h1 class="loading text-center mt-5 mb-5">결과를 분석 중 입니다...</h1>
+                <div class="spinner-border" role="status">
+              </div>
+        </article>
+        <!-- 결과창 -->
+        <article class="menu_result">
+            
+        </article>
+        <input type="hidden" id ="q1" value="0">
+        <input type="hidden" id ="q2" value="0">
+        <input type="hidden" id ="q3" value="0">
+        <input type="hidden" id ="q4" value="0">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/static/js/test.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
