게시판 기능 수정

--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <main-nav-bar></main-nav-bar>
+    <br>
+    <br>
     <div class="container">
         <h5 class="my-3 border-bottom pb-2">질문등록</h5>
         <form method="post" class="my-3">  
