--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/static/js/navbar.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
+    <main-nav-bar></main-nav-bar>
+    <br>
+    <br>
     <div class="container my-3">
         <!-- 질문 -->
         <h2 class="border-bottom py-2">{{ board.title }}</h2>
@@ -18,7 +22,7 @@
                 <div class="card-text" style="white-space: pre-line;">{{ board.content }}</div>
                 <div class="d-flex justify-content-end">
                     <div class="badge bg-light text-dark p-2">
-                        {{ board.datetime }}
+                        {{ board.datetime|datetime }}
                     </div>
                 </div>
             </div>
@@ -31,7 +35,7 @@
                 <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
                 <div class="d-flex justify-content-end">
                     <div class="badge bg-light text-dark p-2">
-                        {{ answer.datetime }}
+                        {{ answer.datetime|datetime }}
                     </div>
                 </div>
             </div>
@@ -58,7 +62,7 @@
                 <textarea name="content" id="content" class="form-control" rows="10"></textarea>
             </div>
             <input type="submit" value="답변등록" class="btn btn-primary">
-            <a href="{{ url_for('board.board_main') }}" class="btn btn-secondary" style="float: right">돌아가기</a>
+            <a href="{{ url_for('board._list') }}" class="btn btn-secondary" style="float: right">돌아가기</a>
         </form>
     </div>
 </body>
