--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -5,12 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/static/js/navbar.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
 </head>
 
 <body>
-<div class="container my-3">
+    <main-nav-bar></main-nav-bar>
+    <br>
+    <br>
+    <div class="container my-3">
+    <!-- 검색 -->    
+    <div class="row my-3">
+        <div class="col-6">
+            <a href="{{ url_for('board.create') }}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+        <div class="col-6">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}" onkeyup="if(window.event.keyCode==13){btn_search}">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 검색 -->
     <table class="table">
         <thead>
         <tr class="table-dark">
@@ -21,13 +40,16 @@
         </thead>
         <tbody>
         {% if board_list %}
-        {% for board in board_list %}
+        {% for board in board_list.items %}
         <tr>
-            <td>{{ loop.index }}</td>
+            <td>{{ board.index }}</td>
             <td>
-                <a href="{{ url_for('board.detail', board_index=board.index) }}">{{ board.title }}</a>
+                <a href="{{ url_for('board.detail', board_index=board.index) }}">{{ board.title }}</a>                
+                {% if board.comment_set|length > 0 %}
+                <span class="text-secondary small mx-2">[{{ board.comment_set|length }}]</span>
+                {% endif %}
             </td>
-            <td>{{ board.datetime }}</td>
+            <td>{{ board.datetime|datetime }}</td>
         </tr>
         {% endfor %}
         {% else %}
@@ -36,8 +58,70 @@
         </tr>
         {% endif %}
         </tbody>
-    </table>
-    <a href="{{ url_for('board.create') }}" class="btn btn-primary">질문 등록하기</a>
-    <a href="{{ url_for('main') }}" class="btn btn-secondary" style="float: right">홈으로</a>
+    </table>    
+    <!-- 페이징처리 -->
+    <ul class="pagination justify-content-center">
+        <!-- 이전 페이지가 있으면 이전 링크 활성화 -->
+        {% if board_list.has_prev %}
+        <li class="page-item">
+            <a class="page-link" data-page="{{ board_list.prev_num }}" href="javascript:void(0)">이전</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="javascript:void(0)">이전</a>
+        </li>
+        {% endif %}
+        <!-- 페이지 번호 -->
+        {% for page_num in board_list.iter_pages() %}
+            {% if page_num %}
+                {% if page_num != board_list.page %}
+                <li class="page-item">
+                    <a class="page-link" data-page="{{ page_num }}" href="javascript:void(0)">{{ page_num }}</a>
+                </li>
+                {% else %}
+                <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="javascript:void(0)">{{ page_num }}</a>
+                </li>
+                {% endif %}
+            {% else %}
+                <li class="disabled">
+                    <a class="page-link" href="javascript:void(0)">...</a>
+                </li>
+            {% endif %}
+        {% endfor %}
+        <!-- 다음 페이지가 있으면 다음 링크 활성화 -->
+        {% if board_list.has_next %}
+        <li class="page-item">
+            <a class="page-link" data-page="{{ board_list.next_num }}" href="javascript:void(0)">다음</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="javascript:void(0)">다음</a>
+        </li>
+        {% endif %}
+    </ul>
+    <!-- 페이징처리 -->
+    <!-- 검색 폼 -->
+    <form class="searchArea" id="searchForm" method="get" action="{{ url_for('board._list') }}">
+        <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
+        <input type="hidden" id="page" name="page" value="{{ page }}">
+    </form>
+    <!-- 검색 폼 -->
+    <script type='text/javascript'>
+        const page_elements = document.getElementsByClassName("page-link");
+        Array.from(page_elements).forEach(function(element) {
+            element.addEventListener('click', function() {
+                document.getElementById('page').value = this.dataset.page;
+                document.getElementById('searchForm').submit();
+            });
+        });
+        const btn_search = document.getElementById("btn_search");
+        btn_search.addEventListener('click', function() {
+            document.getElementById('kw').value = document.getElementById('search_kw').value;
+            document.getElementById('page').value = 1;  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+            document.getElementById('searchForm').submit();
+        });
+    </script>
+    <a href="{{ url_for('main') }}" class="btn btn-secondary">홈으로</a>
 </div>
 </body>
