--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -20,6 +20,7 @@
       <main-nav-bar></main-nav-bar>
       <div id="ladder_main" class="ladder_main">
         <form id="ladderForm">
+          <input type="text" style="display:none;">
           <div id="box">
               <input id="want_food" type="text" placeholder="내가 먹고 싶은 메뉴"> <input id="addBtn" type="button" value="추가" onclick="addTextbox()">
           </div>
