--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -18,7 +18,7 @@
     <br>
     <div class="container">
         <h5 class="my-3 border-bottom pb-2">게시글 작성</h5>
-        <form method="post" class="my-3">  
+        <form method="post" class="my-3" enctype="multipart/form-data">  
             {{ form.csrf_token }}     
             <!-- 오류표시 Start -->
             {% if form.errors %}
@@ -42,8 +42,13 @@
                 <label for="content" style="margin-bottom:5px">내용</label>
                 <textarea class="form-control" name="content" id="content" rows="10" placeholder="내용 입력">{{ form.content.data or '' }}</textarea>
             </div>
+            <div class="mb-3">
+                <label for="content" style="margin-bottom:5px">사진 첨부</label>
+                <input type="file" id="file_upload" name="file_upload" />  
+            </div>
             <button type="submit" class="btn btn-primary">저장하기</button>
-            <input type="hidden" id="login_name" name="login_name" value="{{ form.login_name }}">
+            <input id="login_name" name="login_name" value="" >
+            <input id="login_email" name="login_email" value="">
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
