--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/navbar.js" defer></script>
     <script src="/static/js/board_detail.js" defer></script>
+    <link rel="stylesheet" href="/static/css/font.css">
 </head>
 
 <body>
