--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>오메추!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link href="/static/css/index.css" rel="stylesheet">
     <script src="/static/js/navbar.js" defer></script>
+    <link rel="stylesheet" href="/static/css/font.css">
 </head>
 <body>
     <div class="main">
       <main-nav-bar></main-nav-bar>
       <div class="main-page">
-        <h2 class="main-text">오늘 뭐 먹을래?</h2>
+        <h2 class="main-text">더 이상 뭐 먹을지 고민하지 말자</h2>
         <div class="main-box">
           <div class="main-box_1">
           <p>아무 생각이 없다</p>
