--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -9,7 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/board_form.js" defer></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/css/font.css">
+    <title>글쓰기</title>
 </head>
 
 <body>
