--- a/templates/roulette.html
+++ b/templates/roulette.html
@@ -9,27 +9,26 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/navbar.js" defer></script>
-
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/css/font.css">
+    <title>룰렛 돌리기</title>
 </head>
 <body>
     <div>
         <main-nav-bar></main-nav-bar>
         <div class="roulette_main">
           <div>
-            <h2>메뉴 추천해드립니다</h2>
+            <h2>돌려 돌려!</h2>
           </div>
           <div class="roulette_main_btn">
-            <button class="roulette_cate_btn" onclick="foodSelect('랜덤')">랜덤</button>
-            <button class="roulette_cate_btn" onclick="foodSelect('한식')">한식</button>
-            <button class="roulette_cate_btn" onclick="foodSelect('중식')">중식</button>
-            <button class="roulette_cate_btn" onclick="foodSelect('양식')">양식</button>
-            <button class="roulette_cate_btn" onclick="foodSelect('일식')">일식</button>
-            <button class="roulette_cate_btn">기타</button>
+            <button id='r_b' class="roulette_cate_btn" onclick="foodSelect('랜덤')">랜덤</button>
+            <button id='r_b1' class="roulette_cate_btn" onclick="foodSelect('한식')">한식</button>
+            <button id='r_b2' class="roulette_cate_btn" onclick="foodSelect('중식')">중식</button>
+            <button id='r_b3' class="roulette_cate_btn" onclick="foodSelect('양식')">양식</button>
+            <button id='r_b4' class="roulette_cate_btn" onclick="foodSelect('일식')">일식</button>
           </div>
-          <div class="roulette">
+          <div class="roulette mt-3">
             <canvas width="380" height='380'></canvas>  
-            <button class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
+            <button id='r_b6'class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
           </div>
         </div>
     </div>
