--- a/templates/roulette.html
+++ b/templates/roulette.html
@@ -19,16 +19,16 @@
           <div>
             <h2>돌려 돌려!</h2>
           </div>
-          <div class="roulette_main_btn">
-            <button id='r_b' class="roulette_cate_btn" onclick="foodSelect('랜덤')">랜덤</button>
-            <button id='r_b1' class="roulette_cate_btn" onclick="foodSelect('한식')">한식</button>
-            <button id='r_b2' class="roulette_cate_btn" onclick="foodSelect('중식')">중식</button>
-            <button id='r_b3' class="roulette_cate_btn" onclick="foodSelect('양식')">양식</button>
-            <button id='r_b4' class="roulette_cate_btn" onclick="foodSelect('일식')">일식</button>
+          <div id='r_b' class="roulette_main_btn">
+            <button class="roulette_cate_btn" onclick="foodSelect('랜덤')">랜덤</button>
+            <button class="roulette_cate_btn" onclick="foodSelect('한식')">한식</button>
+            <button class="roulette_cate_btn" onclick="foodSelect('중식')">중식</button>
+            <button class="roulette_cate_btn" onclick="foodSelect('양식')">양식</button>
+            <button class="roulette_cate_btn" onclick="foodSelect('일식')">일식</button>
           </div>
           <div class="roulette mt-3">
             <canvas width="380" height='380'></canvas>  
-            <button id='r_b6'class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
+            <button id='r_b1'class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
           </div>
         </div>
     </div>
