--- a/templates/member_del.html
+++ b/templates/member_del.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="/static/css/user_page.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/member_del.js" defer></script>
     
     <!--jquery cookie를 사용하기 위해 head영역에 둬야함.-->
