--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,17 +2,26 @@
     text-align: center;
     align-items: center;
 }
+img{
+    width: 180px;
+    height: 120px;
+}
 .main-text {
     margin-top: 100px;
+}
+.main_text {
+    margin: 30px 0px 50px 20px
 }
 .main-page {
     margin: 0 auto;
 }
 .main-box {
+    background: url("/static/images/index.png");
+    background-repeat: no-repeat;
+    background-size: contain;
     margin-top: 50px;
     margin: 0 auto;
     text-align: center;
-    border: 2px solid black;
     width: 95%;
     height: 500px;
     max-width: 500px;
@@ -26,8 +35,6 @@
     padding-left: 10px;
 }
 .main-btn {
-    color: black;
     background-color: white;
     border-radius: 10px;
-    padding: 10px;
 }
