--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    <link rel="stylesheet" href="/static/css/font.css">
     <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <title>오메추! 게시판</title>
 </head>
 
@@ -219,6 +220,7 @@
     </script>
     <a href="{{ url_for('main') }}" class="btn btn-secondary">홈으로</a>
 </div>
+<script src="/static/js/board.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin=“anonymous”></script>
 </body>
