--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>오메추!</title>
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
@@ -16,17 +17,17 @@
     <div class="main">
       <main-nav-bar></main-nav-bar>
       <div class="main-page">
-        <h2 class="main-text">더 이상 뭐 먹을지 고민하지 말자</h2>
+        <p class="mt-5 pt-5"></p>
         <div class="main-box">
+          <div>
+            <h2 class="main_text">더 이상 뭐 먹을지 고민하지 말자
+            </h2>
+          </div>
           <div class="main-box_1">
-          <p>아무 생각이 없다</p>
-          <p>아무거나 추천해줘!!</p>
-          <button class="main-btn" onclick = "location.href ='/roulette'" >룰렛 바로가기</button>
+          <a href="/roulette"><img class="oneimg"src="/static/images/index1.png"></a>
         </div>
         <div class="main-box_2">
-          <p>음식 이상형 월드컵을 통해서</p>
-          <p>내가 원하는 음식 추천받을래!</p>
-          <button class="main-btn" onclick = "location.href ='/test'">테스트 바로가기</button>
+          <a href="/test"><img class="twoimg" src="/static/images/index2.png"></a>
         </div>
         </div>
       </div>
