--- a/templates/join.html
+++ b/templates/join.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/navbar.js" defer></script>
 </head>
 <body>
