--- a/templates/join_finish.html
+++ b/templates/join_finish.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <link href="/static/index.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/navbar.js" defer></script>
 
 </head>
