--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -16,6 +16,7 @@
     <script src="/static/js/navbar.js" defer></script>
     <title>나만의 룰렛</title>
     <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link href="/static/css/roulette.css" rel="stylesheet">
   </head>
   <body>
