--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -11,6 +11,7 @@
     <link href="/static/css/user_page.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/font.css">
     <script src="/static/js/navbar.js" defer></script>
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/user_page.js" defer></script>
 </head>
 <body>
@@ -22,12 +23,11 @@
             <h4 id="user_email"></h4>
         </div>
         <div class="user_function">
-            
-            <button class="user_btn" onclick = "location.href ='/change_pw'">비번 변경하기</button>
-            <a href="{{ url_for('board._list', kw = user_email) }}" class="user_btn" style="text-decoration-line : none">내가 쓴 글 조회하기</a>
+            <a class="user_btn" onclick = "location.href ='/change_pw'">비번 변경하기</a>
+            <a href="{{ url_for('board._list', kw = user_email) }}" class="user_btn">내가 쓴 글</a>
             <!-- <button class="user_btn" onclick = "location.href ='/user_page/mypost'">내가 쓴 글 조회하기</button> -->
-            <button class="user_btn">문의하기</button>
-            <button class="user_btn" onclick = "location.href ='/member_del'">회원 탈퇴하기</button>
+            <a class="user_btn">문의하기</a>
+            <a class="user_btn" onclick = "location.href ='/member_del'">회원 탈퇴하기</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
