--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -12,6 +12,8 @@
     <script src="/static/js/navbar.js" defer></script>
     <script src="/static/js/board_detail.js" defer></script>
     <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/board.css">
+
 </head>
 
 <body>
