--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -11,6 +11,7 @@
     <script src="/static/js/board_form.js" defer></script>
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/board.css">
     <title>글쓰기</title>
 </head>
 
