--- a/templates/roulette.html
+++ b/templates/roulette.html
@@ -30,8 +30,8 @@
             <button class="roulette_cate_btn" onclick="foodSelect('일식')">일식</button>
           </div>
           <div class="roulette mt-4">
-            <canvas width="380" height='380'></canvas>  
-            <button id='r_b1'class="roulette_btn" onclick="rotate()">룰렛 돌리기</button>
+            <canvas id="rlc" width="380" height='380'></canvas>  
+            <button id='r_b1'class="roulette_btn mt-4" onclick="rotate()">룰렛 돌리기</button>
           </div>
         </div>
     </div>
