--- a/templates/test.html
+++ b/templates/test.html
@@ -57,7 +57,7 @@
         </article>
         <!-- 결과창 -->
         <article class="menu_result" style="display: none">
-            <h1 class="text-center">오늘의 이거 먹자</h1>
+            <h1 class="text-center">오늘은 이거 먹자</h1>
             <h4 id="result_menu" class="text-center">menu</h4>
             <button class="" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
             <div class="menulist" style="display: none">메뉴</div>
