--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,9 +3,39 @@
     align-items: center;
 }
 img{
-    width: 180px;
-    height: 120px;
+    width: 220px;
+    height: 170px;
 }
+.main_box_inline{
+    display: flex;
+}
+.main_box_inline.flex-start{justify-content: flex-start;}
+.main_box_inline.flex-end{justify-content: flex-end;}
+.main-box_1{
+    padding-left: 40px;
+}
+.main-box_2{
+    padding-left: 10px;
+}
+@media (max-width: 768px){
+    img{
+        width: 200px;
+        height: 150px;
+    }
+}
+@media (max-width: 500px){
+    img{
+        width: 160px;
+        height: 110px;
+    }
+    h2{
+        font-size: 23px;
+    }
+    .main-box_1{
+        padding-left: 20px;
+    }
+}
+
 .main-text {
     margin-top: 100px;
 }
@@ -26,13 +56,6 @@ img{
     height: 500px;
     max-width: 500px;
     padding: 20px;
-}
-.main-box_1{
-    display: inline-block;
-}
-.main-box_2{
-    display: inline-block;
-    padding-left: 10px;
 }
 .main-btn {
     background-color: white;
