--- a/static/css/join.css
+++ b/static/css/join.css
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Noto Sans KR", sans-serif;
  }
-  
+ input[type=password]{
+  font-family:"굴림";
+}
 
   
   /* li {
