--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,10 +1,7 @@
 
-
-  
-  /* li {
-    list-style: none;
-  } */
-  
+ input[type=password]{
+  font-family:"굴림";
+}
   .submit_text{
     text-align: center;
   }
