--- a/static/css/roulette.css
+++ b/static/css/roulette.css
@@ -4,6 +4,12 @@
 canvas {
   transition: 2s;
 }
+@media (max-width:500px) {
+  #rlc{
+    width: 300px;
+    height: 300px;
+  }
+}
 
 .roulette_btn {
   background: #febf00;
