--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/navbar.js" defer></script>
     <script src="/static/js/board_list.js" defer></script>
+    <link rel="stylesheet" href="/static/css/board.css">
     <title>오메추! 게시판</title>
 </head>
 
@@ -28,10 +29,12 @@
 
     <div class="row my-3">
         <div class="row-3">
-            <!-- 게시글 작성 버튼 -->   
-            <a href="{{ url_for('board.create') }}" class="btn btn-primary">게시글 작성</a>
+             <!-- 게시글 작성 버튼 -->   
+            <div class="div1">
+                <a href="{{ url_for('board.create') }}" class="btn btn-primary">게시글 작성</a>
+            </div>
             <!-- 드롭다운 메뉴 START -->   
-            <div class="dropdown">
+            <div class="dropdown div2">
                 <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 {{tab or '전체'}}
                 </button>
@@ -113,7 +116,7 @@
     </table>    
 
     <!-- 검색 버튼 그룹 -->
-    <div class="row-6" style="width:50% ; margin-bottom:10px ; justify-content: center;">
+    <div class="row-6">
         <div class="input-group" >
             <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}" style="margin-right:10px">
             <div class="input-group-append">
