--- a/templates/index.html
+++ b/templates/index.html
@@ -20,18 +20,23 @@
         <p class="mt-5 pt-5"></p>
         <div class="main-box">
           <div>
-            <h2 class="main_text">더 이상 뭐 먹을지 고민하지 말자
+            <h2 class="main_text">더 이상 뭐 먹을지 고민하지 말자!
             </h2>
           </div>
-          <div class="main-box_1">
+          <div class="main_box_inline flex-start">
+            <div class="main-box_1">
           <a href="/roulette"><img class="oneimg"src="/static/images/index1.png"></a>
         </div>
+          </div>
+        <div class="main_box_inline flex-end">
         <div class="main-box_2">
           <a href="/test"><img class="twoimg" src="/static/images/index2.png"></a>
         </div>
+      </div>
+          </div>
+          
         </div>
       </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/js/index.js"></script>
 </body>
