익명 수정삭제 불가, test 수정

--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -64,6 +64,7 @@
                     </ul>
                 </div>
             </div>
+            <h5 id="anonymous_warn" style="margin-bottom:5px"></h5>
             <button type="submit" class="btn btn-primary">저장하기</button>
             <a href="{{ url_for('board._list') }}" class="btn btn-secondary" style="float: right">돌아가기</a>
             <input type="hidden" id="login_name" name="login_name" value="" >
