--- a/templates/test.html
+++ b/templates/test.html
@@ -48,6 +48,7 @@
             <input id="type" type="hidden" value="EI">
             <button id="A" type="button" class="mt-3 btn-answer btn btn-primary">Primary</button>
             <button id="B" type="button" class="btn-answer btn btn-primary mt-3">Primary</button>
+            <button id="C" type="button" class="btn-answer btn btn-primary mt-3">Primary</button>
         </article>
         <!-- 로딩창 -->
         <article class="loading">
