--- a/static/css/test.css
+++ b/static/css/test.css
@@ -2,6 +2,9 @@
 *{
     box-sizing: border-box;
 }
+@media (max-width:500px){
+
+}
 body {
     background-color: #ffffff;
     color: black;
@@ -17,10 +20,7 @@ article {
 }
 
 /* 시작화면 */
-.ad-banner {
-    width: 320px;
-    margin: 0 auto;
-}
+
 .question {
     display: none;
 }
@@ -29,27 +29,12 @@ article {
     height: 300px;
     margin: 0 auto;
 }
-.countt {
-    text-align: center;
-    font-style: normal;
-    font-size: 13px;
-    color: gray;
-    margin-top: 3px;
-    flex-direction: row;
 
-}
 .startMes {
     font-size: 16px;
     color: gray;
 }
-.userCount {
-    text-align: center;
-    font-style: normal;
-    font-size: 14px;
-    color: black;
-    margin-top: 10px;
-    flex-direction: row;
-}
+
 .downloadimg {
     text-align: center;
 }
@@ -93,6 +78,7 @@ article {
     justify-content: center;
     align-items: center;
 }
+
 .btn-start {
     font-size: 16px;
     color: black;
@@ -123,6 +109,7 @@ article {
 /* 문제 화면 */
 .cate_qus {
     display: none;
+    margin-top: 100px;
 }
 .cate_question {
     margin-top: 50px;
@@ -140,8 +127,12 @@ article {
     background-color: black;
     color: white;
 }
+.cate_btn:hover{
+    background-color: #fff;
+    color: black;
+}
 
-.btn-answer, .btn-answer:visited, .btn-answer:hover, .btn-answer:focus {
+.btn-answer {
     background-color: #fff !important;
     border: 2px solid #1f1f1f !important;
     border-color: black;
@@ -150,7 +141,32 @@ article {
     font-size: 13px;
     color: black;
 }
-.btn-answer:hover {
+.btn-answer3{
+    background-color: #fff !important;
+    border: 2px solid #1f1f1f !important;
+    border-color: black;
+    width: 288px;
+    margin: 0 auto;
+    font-size: 13px;
+    color: black;
+    height: 70px;
+}
+.all_menu{
+        color: black;
+        background-color: pink;
+        border: 0;
+        width: 100px;
+        margin: 20px auto;
+        display: block;
+}
+.menulust{
+    display: flex;
+}
+.all_menu:hover{
+    background-color: deeppink;
+    color: white;
+}
+.btn-answer3:hover {
     background-color: #fff;
     border:#fff;
     width: 288px;
