--- a/templates/member_del.html
+++ b/templates/member_del.html
@@ -7,13 +7,15 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="/static/css/board.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/user_page_in.css">
     <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <link rel="stylesheet" href="/static/css/font.css">
     <script src="/static/js/member_del.js" defer></script>
     
     <!--jquery cookie를 사용하기 위해 head영역에 둬야함.-->
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js" defer></script>
+    <script src="/static/js/navbar.js" defer></script>
 
 </head>
 <body>
@@ -23,12 +25,12 @@
         <div class="user_information">
             <div class="form-group">
                 <label>ID 확인</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp"
+                <input type="text" class="form-control" aria-describedby="emailHelp"
                        id="email" placeholder="">
             </div>
             <div class="form-group">
                 <label>비밀번호 확인</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp"
+                <input type="password" class="form-control" aria-describedby="emailHelp"
                        id="password" placeholder="">
             </div>
             <button type="submit" onclick="member_del()" class="btn btn-primary">회원탈퇴하기</button>
