--- a/templates/qna.html
+++ b/templates/qna.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/font.css">
     <link href="/static/css/qna.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/user_page_in.css">
     <link rel="shortcut icon" href="/static/images/favicon.ico">
 
 
@@ -34,8 +35,7 @@
                     <h4 id="user_email"></h4>
                 </div>
                 <div class="form-floating">
-                    <textarea id="comment" class="form-control" placeholder="Leave a comment here"></textarea>
-                    <label for="floatingTextarea2">문의내용</label>
+                    <textarea id="comment" class="form-control" placeholder="문의 내용"></textarea>
                 </div>
                 <button onclick="posting()" type="button" class="btn btn-dark">문의하기</button>
             </div>
