--- a/templates/test.html
+++ b/templates/test.html
@@ -48,7 +48,7 @@
             <input id="type" type="hidden" value="EI">
             <button id="A" type="button" class="mt-3 btn-answer btn btn-primary">Primary</button>
             <button id="B" type="button" class="btn-answer btn btn-primary mt-3">Primary</button>
-            <button id="C" type="button" class="btn-answer btn btn-primary mt-3">Primary</button>
+            <button id="C" type="button" class="btn-answer3 btn btn-primary mt-3">Primary</button>
         </article>
         <!-- 로딩창 -->
         <article class="loading">
@@ -60,7 +60,7 @@
         <article class="menu_result" style="display: none">
             <h1 class="text-center">오늘은 이거 먹자</h1>
             <h4 id="result_menu" class="text-center">menu</h4>
-            <button class="" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
+            <button class="all_menu" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
             <div class="menulist" style="display: none">메뉴</div>
         </article>
         <input type="hidden" id ="q1" value="0">
