--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -26,7 +26,7 @@
             <a class="user_btn" onclick = "location.href ='/change_pw'">비번 변경하기</a>
             <a href="{{ url_for('board._list', kw = user_email) }}" class="user_btn">내가 쓴 글</a>
             <!-- <button class="user_btn" onclick = "location.href ='/user_page/mypost'">내가 쓴 글 조회하기</button> -->
-            <a class="user_btn">문의하기</a>
+            <a class="user_btn" onclick="location.href='/qna'">문의하기</a>
             <a class="user_btn" onclick = "location.href ='/member_del'">회원 탈퇴하기</a>
         </div>
     </div>
