--- a/static/css/ladder.css
+++ b/static/css/ladder.css
@@ -2,6 +2,21 @@ input:focus {
   outline: none;
 }
 
+@media (max-width:500px) {
+  #rlc{
+    width: 300px;
+    height: 300px;
+  }
+}
+.btn{
+  color: black;
+        background-color: pink;
+        border: 0;
+}
+.btn:hover{
+  background-color: deeppink;
+  color: white;
+}
 input[type='text'] {
   width: 300px;
   height: 32px;
