--- a/templates/test.html
+++ b/templates/test.html
@@ -61,7 +61,7 @@
             <h1 class="text-center">오늘은 이거 먹자</h1>
             <h4 id="result_menu" class="text-center">menu</h4>
             <button class="all_menu" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
-            <div class="menulist" style="display: none">메뉴</div>
+            <div id ="menulist" class="menulist" style="display: none"></div>
         </article>
         <input type="hidden" id ="q1" value="0">
         <input type="hidden" id ="q2" value="0">
