--- a/static/css/user_page_in.css
+++ b/static/css/user_page_in.css
@@ -1,6 +1,12 @@
 *{
     text-align: center;
 }
+h2{
+    font-size: 20px;
+}
+h4{
+    font-size: 16px;
+}
 input[type='text'] {
     height: 32px;
     font-size: 15px;
