--- a/templates/test.html
+++ b/templates/test.html
@@ -62,6 +62,7 @@
             <h4 id="result_menu" class="text-center">menu</h4>
             <button class="all_menu" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
             <div id ="menulist" class="menulist" style="display: none"></div>
+            <button class="all_menu mt-3" onclick="location.href='/test'">테스트 다시하기</button>
         </article>
         <input type="hidden" id ="q1" value="0">
         <input type="hidden" id ="q2" value="0">
