--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,59 +2,56 @@
     text-align: center;
     align-items: center;
 }
-img{
-    width: 220px;
-    height: 170px;
-}
 .main_box_inline{
     display: flex;
+    margin: 0 auto;
 }
-.main_box_inline.flex-start{justify-content: flex-start;}
-.main_box_inline.flex-end{justify-content: flex-end;}
 .main-box_1{
-    padding-left: 40px;
+    margin: 0 auto;
 }
 .main-box_2{
-    padding-left: 10px;
+    margin: 0 auto;
+}
+
+img{
+    width: 450px;
+    height: 450px;
+}
+@media (max-width: 1024px){
+   img{
+    width: 400px;
+    height: 400px;
+   }
 }
 @media (max-width: 768px){
-    img{
-        width: 200px;
-        height: 150px;
-    }
+ img{
+    width: 350px;
+    height: 350px;
+ }
 }
-@media (max-width: 500px){
-    img{
-        width: 160px;
-        height: 110px;
-    }
-    h2{
-        font-size: 23px;
-    }
-    .main-box_1{
-        padding-left: 20px;
+@media (max-width:500px){
+    .main_box_inline{
+        display: block;
+        margin: 0 auto;
     }
 }
 
 .main-text {
     margin-top: 100px;
 }
-.main_text {
-    margin: 30px 0px 50px 20px
-}
+
 .main-page {
     margin: 0 auto;
 }
 .main-box {
-    background: url("/static/images/index.png");
     background-repeat: no-repeat;
     background-size: contain;
     margin-top: 50px;
     margin: 0 auto;
     text-align: center;
     width: 95%;
-    height: 500px;
-    max-width: 500px;
+    
+    max-width: 700px;
     padding: 20px;
 }
 .main-btn {
